--- a/processor.ipynb
+++ b/processor.ipynb
@@ -2,41 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import struct\n",
-    "import xarray as xr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import xarray as xr\n",
+    "import matplotlib.pyplot as plt\n",
+    "from cartoplot import cartoplot\n",
+    "\n",
     "grids = {}\n",
+    "\n",
+    "dims = (120,360)\n",
     "\n",
     "for i in ['lon','lat']:\n",
     "\n",
-    "    grid = np.array(pd.read_csv(f'grids/{i}grid.dat',header=None, delim_whitespace=True))\n",
+    "    grid = np.array(pd.read_csv(f'grids/{i}grid.dat',\n",
+    "                                header=None,\n",
+    "                                delim_whitespace=True))\n",
     "\n",
     "    flat_grid = grid.ravel()\n",
-    "\n",
-    "    shaped_grid = flat_grid.reshape(360,120)\n",
     "    \n",
-    "    grids[i] = shaped_grid\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#     if i == 'lon':\n",
+    "\n",
+    "    shaped_grid = flat_grid.reshape(dims)\n",
+    "        \n",
+    "#     else:\n",
+    "        \n",
+    "#         shaped_grid = flat_grid.reshape((360,120))\n",
+    "    \n",
+    "    grids[i] = shaped_grid\n",
+    "\n",
+    "\n",
     "def process_piomas(year):\n",
     "    \n",
     "    binary_dir = f'binaries/heff.H{year}'\n",
@@ -54,16 +53,22 @@
     "    \n",
     "    # Put it in a 3D array\n",
     "        \n",
-    "        native_data = np.full((12,360,120),np.nan)\n",
+    "        native_data = np.full((12,dims[0],dims[1]),np.nan)\n",
     "\n",
     "        for month in range(1,13):\n",
     "            \n",
-    "            start = (month-1)*(360*120)\n",
-    "            end = month*(360*120)\n",
+    "            start = (month-1)*(dims[0]*dims[1])\n",
+    "            end = month*(dims[0]*dims[1])\n",
     "            thickness_list = np.array(data[start:end])\n",
     "            \n",
-    "            gridded = thickness_list.reshape(360,120)\n",
+    "            gridded = thickness_list.reshape(dims[0],dims[1])\n",
     "            native_data[month-1,:,:] = gridded\n",
+    "            \n",
+    "#             cartoplot(grids['lon'],grids['lat'],gridded)\n",
+    "\n",
+    "            plt.imshow(gridded)\n",
+    "            \n",
+    "            break\n",
     "            \n",
     "          \n",
     "    ############################################################\n",
@@ -110,31 +115,19 @@
     "        output_dir = f'output/'\n",
     "\n",
     "        ds.to_netcdf(f'{output_dir}{year}.nc','w')\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "    return native_data\n",
+    "\n",
     "for year in range(1993,1994):\n",
     "    \n",
-    "    process_piomas(year)"
+    "    x = process_piomas(year)\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -148,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
