changing coord names for panoply

--- a/processor.ipynb
+++ b/processor.ipynb
@@ -77,8 +77,8 @@
     "        \n",
     "        ds = xr.Dataset( data_vars={'thickness':(['t','x','y'],native_data)},\n",
     "\n",
-    "                         coords =  {'lon':(['x','y'],grids['lon']),\n",
-    "                                    'lat':(['x','y'],grids['lat']),\n",
+    "                         coords =  {'longitude':(['x','y'],grids['lon']),\n",
+    "                                    'latitude':(['x','y'],grids['lat']),\n",
     "                                    'month':(['t'],np.array(range(1,13)))})\n",
     "        \n",
     "        ds.attrs['data_name'] = 'Monthly mean Piomas sea ice thickness data'\n",
